2003-09-24  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-form.el (w3m-form-put-property): Don't call intern if it is not 
	a string.
	(w3m-form-get-property): Ditto.
	(w3m-form-put): Added argument ID.
	(w3m-form-get): Changed argument from NAME to ID.
	(w3m-form-make-form-data): Changed process to get NAME and VALUE.
	(w3m-form-resume): Follow the API change in w3m-form-put and
	w3m-form-get.
	(w3m-fontify-textareas): Ditto.
	(w3m-form-parse-and-fontify): Ditto.
	(w3m-form-input): Ditto.
	(w3m-form-input-password): Ditto.
	(w3m-form-input-checkbox): Ditto.
	(w3m-form-input-radio): Ditto.
	(w3m-form-input-file): Ditto.
	(w3m-form-input-textarea-set): Ditto.
	(w3m-form-textarea-info): Ditto.
	(w3m-form-input-select): Ditto.
	(w3m-form-submit): Ditto.
	(w3m-form-real-reset): Follow the structure change.
	(w3m-form-input-select-id): New buffer local variable.
	(w3m-form-input-select-set): Use it.
	(w3m-form-field-parse): New inline function.
	(w3m-form-parse-and-fontify): Put id for selectinfo.
	(w3m-form-resume): Fixed regexp.
	(w3m-form-input-textarea): Fixed line number.
	(w3m-fontify-textareas): Put w3m-form-id property.
	(w3m-form-parse-and-fontify): Store id to the textareainfo.

2003-09-24  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-favicon.el (w3m-favicon-retrieve): Redisplay Emacs frame;
	rename from `w3m-retrieve-favicon'.
	(w3m-favicon-image): Rename from `w3m-current-favicon-image'.
	(w3m-favicon-setup): Rename from `w3m-setup-favicon'.
	(w3m-favicon-image-of): Rename from `w3m-buffer-favicon'.
	(w3m-favicon-convert): Rename from `w3m-convert-favicon'.
	(w3m-favicon-retrieve): Rename from `w3m-retrieve-favicon'.

	* w3m-e21.el (w3m-tab-line): Rename `w3m-buffer-favicon' with
	`w3m-favicon-image-of'.

	* w3m.el (w3m-clean-hook-options): Rename `w3m-setup-favicon' with
	`w3m-favicon-setup'.
	(w3m-buffer-setup): Rename `w3m-current-favicon-image' with
	`w3m-favicon-image'.

2003-09-23  OHASHI Akira  <bg66@koka-in.org>
